--- a/code/hmm_src/Makefile.macos
+++ b/code/hmm_src/Makefile.macos
@@ -12,9 +12,9 @@
 VER=1.06
 
 CXX = g++
-CXXFLAGS = -O2 -Wall -I. 
+CXXFLAGS = -O0 -g  -Wall -I. 
 LIBS = -lboost_program_options -lboost_iostreams
-LDFLAGS = -lm  -lstdc++ 
+LDFLAGS = -lm  -lstdc++  -g
 
 SRCS = main.cpp \
 	data_2.cpp model_2.cpp parameter_parser_2.cpp parameters_2.cpp \
