--- a/config/learn_from_6.conf
+++ b/config/learn_from_6.conf
@@ -24,7 +24,7 @@ Start Context:
     Archaea: {A: [A], D: [D]}
     Bacteria: {A: [A], B: [B], C: [C], X: [A]}
 Start Codons:
-    Archaea: {A: [A], D: [D]}
+    Archaea: {A: [A, D], D: [A, D]}
     Bacteria: {A: [A], B: [B], C: [C], X: [A]}
 Stop Codons:
     Archaea: {A: [A], D: [D]}
