--- a/config/parallelization_pbs_2.conf
+++ b/config/parallelization_pbs_2.conf
@@ -6,11 +6,11 @@ use-pbs: true                       # whether or not PBS is used
 
 
 # Jobs, Nodes and Processors
-pbs-jobs: 256                        # number of jobs to create
+pbs-jobs: 233                       # number of jobs to create
 pbs-nodes: 1                        # how many nodes are allocated for a single job
 pbs-ppn: 1                          # number of processors per node (for compute nodes only)
 pbs-concurrent-nodes: 33            # maximum number of nodes to be used at any given time
-pbs-node-property: db               # a flag/property of PBS nodes that limits which nodes can be used
+pbs-node-property: null             # a flag/property of PBS nodes that limits which nodes can be used
 pbs-walltime: 07:00:00:00           # maximum runtime for a job
 
 # Head node and compute node directories
